EVG-393 more complete fix for column misalign CSS on grid/history

--- a/public/static/less/grid.less
+++ b/public/static/less/grid.less
@@ -105,7 +105,7 @@ ul.tooltip-tasks{
     }
     .top-header-row {
         padding-top: @header_height;
-        padding-left: @rowheader_width+3px;
+        padding-left: @rowheader_width+38px;
         white-space: nowrap;
 
         .header-cell {
