--- a/public/static/less/task_history.less
+++ b/public/static/less/task_history.less
@@ -1,7 +1,7 @@
 .task-history-gridtable {
   .top-header-row.locked {
     margin-left: 250px;
-    padding-left: 23px;
+    padding-left: 58px;
     width: 590px;
   }
   .tablerow {
